# codecrafters-git-rust

./: Cargo.toml  README.md
src/: cli.rs  fs.rs  lib.rs  main.rs  objects.rs  repo.rs  repository.rs
src/cli/: mod.rs
src/cli/commands/: init.rs
src/commands/: cat_file.rs  error.rs  init.rs  mod.rs
src/core/: repository.rs
src/utils/: error.rs
