[package]
name = "codecrafters-git"
version = "0.1.0"
authors = [ "Codecrafters <hello@codecrafters.io>" ]
edition = "2024"
rust-version = "1.96"

[dependencies]
anyhow = "1.0.103"                                    # error handling
bytes = "1.12.0"                                      # helps manage buffers
flate2 = "1.1.9"                                      # compression
thiserror = "2.0.18"                                  # error handling
clap = { version = "4.6.1", features = [ "derive" ] }
